--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,15 @@
 .list::-webkit-scrollbar {
     display: none;
 }
+
+
+.no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  
+  
+.no-scrollbar {
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    scrollbar-width: none;     /* Firefox */
+  }
+  
